influxdb3_pro/buffer/src/snapshots/influxdb3_pro_buffer__replica__tests__map_wal_content_for_replica_new_db_new_table-3.snap
---
source: influxdb3_pro/buffer/src/replica.rs
description: "database schema in primary catalog after mapping and applying replica WAL content, should include table 'dog'"
expression: db
---
id: 3
name: sup
tables:
  3:
    table_id: 3
    table_name: dog
    cols:
      f1:
        column_id: 0
        type: f64
        influx_type: field
        nullable: true
      t1:
        column_id: 1
        type:
          dict:
            - i32
            - str
        influx_type: tag
        nullable: true
      time:
        column_id: 2
        type:
          time:
            - ns
            - ~
        influx_type: time
        nullable: false
    column_map:
      - column_id: 0
        name: f1
      - column_id: 1
        name: t1
      - column_id: 2
        name: time
    next_column_id: 3
table_map:
  - table_id: 3
    name: dog
